--- a/dbt_snowflake/dbt_project.yml
+++ b/dbt_snowflake/dbt_project.yml
@@ -2,11 +2,11 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'dbt_snowflake'
+name: 'elt_pipeline'
 version: '1.0.0'
 
 # This setting configures which "profile" dbt uses for this project.
-profile: 'dbt_snowflake'
+profile: 'elt_pipeline'
 
 # These configurations specify where dbt should look for different types of files.
 # The `model-paths` config, for example, states that models in this project can be
@@ -31,6 +31,9 @@ clean-targets:         # directories to be removed by `dbt clean`
 # files using the `{{ config(...) }}` macro.
 models:
   dbt_snowflake:
-    # Config indicated by + and applies to all files under models/example/
-    example:
-      +materialized: view
+      silver:
+        +schema: silver
+        +materialized: table
+      gold:
+        +schema: gold
+        +materialized: view
